Remove use of commons-io from vespa-testrunner-components